Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,32 +31,83 @@
         <hr>
 
         <section id="main_content">
-          <h3>Welcome to GitHub Pages.</h3>
+          <h1>Introduction</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>There are many JavaScript libraries that are correctly and nicely implementing object-oriented approaches, but non of them provides these features only - <em>for example, adding AJAX capabilities, DOM manipulation, ...</em> -</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>jOOPL is here to offer object-oriented programming and no more, just a tiny, simple and effective library that is going to support your JavaScript developments in the Web and anywhere.</p>
+
+<h2>Why jOOPL?</h2>
+
+<p>Web development is going forward at the same speed as the Web does itself. Now this is an internet of applications and this fact is affecting complexity. </p>
+
+<p>Currently object-oriented programming has proven along lot of years that is a productive, near to human mind and cost-effective way of implementing small to large software solutions and, now, in the Web 2.0 and 3.0 times, software applications are more than a Web page showing information since current evolving paradigm is cloud computing, which enables devices, services and programs to connect themselves over the network.</p>
+
+<p>But object-oriented approach has evolved in Web servers and Web clients are somehow using old ways of doing things, excepting selected and famous JavaScript libraries.</p>
+
+<p>That is why jOOPL is here: a small and simple, but yet powerful library that gives developers the power of creating classes, interfaces, take advantage of inheritance, polymorphism and encapsulation, in order to take the Web to the next level with re-usable, scalable, well-written and easy-to-understand custom JavaScript objects. </p>
+
+<h2>Code sample</h2>
+
+<p>Here is a sample usage of jOOPL. Greatly using inheritance, "C" class will print "Hello world!" by chaining "SayHello" method's implementations:</p>
+
+<pre><code>      $namespace.register("jOOPL.Sample");
+
+      jOOPL.Sample.A = $class.declare
+          (
+      // Constructor
+              function (args) {
+              },
+      // Methods
+              {
+              SayHello: function () {
+                  document.write("hello");
+              }
+          }
+          );
+
+      jOOPL.Sample.B = $class.declare
+          (
+              function (args) {
+              },
+              {
+                  SayHello: function () {
+                      this.$base.SayHello();
+                      document.write(" world");
+                  }
+              },
+              jOOPL.Sample.A
+          );
+
+      jOOPL.Sample.IHelloable = $interface.declare(
+              {
+                  SayHello: function () {
+                      throw $new(NotImplementedException);
+                  }
+              }
+          );
+
+      $namespace.alias(jOOPL.Sample, "Sample");
+
+      Sample.C = $class.declare
+          (
+              function (args) {
+              },
+              {
+                  SayHello: function () {
+                      this.$base.SayHello();
+                      document.write("!");
+                  }
+              },
+              jOOPL.Sample.B,
+              jOOPL.Sample.IHelloable
+          );
+
+      $namespace.using("jOOPL.Sample");
+
+      var instance = $new(C);
+      instance.SayHello();
 </code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
         </section>
 
         <footer>
