--- a/files/joopl.js.html
+++ b/files/joopl.js.html
@@ -30,17 +30,10 @@
         
     <h3>Quick links</h3>
     <ul id="quick-links">
-        <li><a href="../">Back to main page</a></li>
-        <li><a href="../classes/$namespace.html#method_register">Creating namespaces</a></li>
-        <li><a href="../classes/$namespace.html#method_using">Importing namespaces</a></li>
-        <li><a href="../classes/$def.html">Working with classes index</a></li>
-        <!--<li><a href="../classes/$def.html#class-constructors">Class constructors</a></li>
-        <li><a href="../classes/$def.html#class-properties">Class properties</a></li>
-        <li><a href="../classes/$def.html#class-events">Class events, custom events</a></li>
-        <li><a href="../classes/$def.html#class-instances">How to instantiate classes (creating objects)</a></li>
-        <li><a href="../classes/$def.html#class-inheritance">Inheritance how-to</a></li>
-        <li><a href="../classes/$def.html#class-polymorphism">Polymorphism how-to</a></li>
-        <li><a href="../classes/$def.html#class-base">Calling base class members how-to</a></li>-->
+        <li><a target="_blank" href="http://joopl.codeplex.com">Official CodePlex site</a></li>
+        <li><a target="_blank" href="http://joopl.codeplex.com/SourceControl/BrowseLatest">Browse latest source code</a></li>
+        <li><a target="_blank" href="http://joopl.codeplex.com/discussions">Discussions</a></li>
+        <li><a target="_blank" href="http://joopl.codeplex.com/workitem/list/basic">Issue tracker</a></li>
     </ul>
 
     <div id="api-tabview" class="tabview">
