Testing links to hashtags...
It seems that they have problems when the page is published in an HTTP
server....

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a href="http://joopl.codeplex.com/SourceControl/BrowseLatest">Browse latest source code</a></li>
         <li><a href="http://joopl.codeplex.com/discussions">Discussion board</a></li>
         <li><a href="http://joopl.codeplex.com/workitem/list/basic">Issue tracker</a></li>
+        <li><a href="./classes/$def.html#class-properties">Properties</a></li>
     </ol>
 
     <div id="api-tabview" class="tabview" style="display: none">
