--- a/classes/$def.html
+++ b/classes/$def.html
@@ -43,9 +43,11 @@
     <h2 class="off-left">> Quick links</h2>
     <ol id="quick-links">
         <li><a href="http://joopl.codeplex.com">Official Codeplex Web site</a></li>
+        <li><a href="https://joopl.codeplex.com/downloads/get/674883"><strong>Download minified jOOPL 2.2.0</strong></a></li>
         <li><a href="http://joopl.codeplex.com/SourceControl/BrowseLatest">Browse latest source code</a></li>
         <li><a href="http://joopl.codeplex.com/discussions">Discussion board</a></li>
         <li><a href="http://joopl.codeplex.com/workitem/list/basic">Issue tracker</a></li>
+        <li><a href="http://mfidemraizer.github.io/joopl/classes/$def.html#class-properties" target="_blank">Test</a></li>
     </ol>
 
     <div id="api-tabview" class="tabview" style="display: none">
