Oh! Removing YUIDoc JavaScript reference....
...makes links to hash tags work as expected!

--- a/classes/$namespace.html
+++ b/classes/$namespace.html
@@ -47,6 +47,7 @@
         <li><a href="http://joopl.codeplex.com/SourceControl/BrowseLatest">Browse latest source code</a></li>
         <li><a href="http://joopl.codeplex.com/discussions">Discussion board</a></li>
         <li><a href="http://joopl.codeplex.com/workitem/list/basic">Issue tracker</a></li>
+        <!--<li><a href="../classes/$def.html#class-properties" target="_self">Test</a></li>-->
     </ol>
 
     <div id="api-tabview" class="tabview" style="display: none">
@@ -78,30 +79,6 @@
             </div>
         </div>
         <div class="yui3-u-3-4">
-                <div id="api-options">
-        Show:
-        <label for="api-show-inherited">
-            <input type="checkbox" id="api-show-inherited" checked>
-            Inherited
-        </label>
-
-        <label for="api-show-protected">
-            <input type="checkbox" id="api-show-protected">
-            Protected
-        </label>
-
-        <label for="api-show-private">
-            <input type="checkbox" id="api-show-private">
-            Private
-        </label>
-        <label for="api-show-deprecated">
-            <input type="checkbox" id="api-show-deprecated">
-            Deprecated
-        </label>
-
-    </div>
-
-
             <div class="apidocs">
                 <div id="docs-main">
                     <div class="content">
@@ -654,13 +631,13 @@ and the <code>this</code> keyword will hold the <code>$global</code> object:</p>
         </div>
     </div>
 </div>
-<script src="../assets/vendor/prettify/prettify-min.js"></script>
+<!--<script src="../assets/vendor/prettify/prettify-min.js"></script>
 <script>prettyPrint();</script>
 <script src="../assets/js/yui-prettify.js"></script>
 <script src="../assets/../api.js"></script>
 <script src="../assets/js/api-filter.js"></script>
 <script src="../assets/js/api-list.js"></script>
 <script src="../assets/js/api-search.js"></script>
-<script src="../assets/js/apidocs.js"></script>
+<script src="../assets/js/apidocs.js"></script>-->
 </body>
 </html>
