--- a/index.html
+++ b/index.html
@@ -106,10 +106,15 @@
                 <div id="docs-main">
                     <div class="content">
                             <div class="apidocs">
-        <div id="docs-main" class="content">            
+        <div id="docs-main" class="content">
             <hr />
             <strong style"color: red">Important note: This documentation site work is still in progress. For any doubt, suggestion or any kind of feedback, please create a new issue or discussion in the <a href="http://joopl.codeplex.com">jOOPL's CodePlex site</a></strong>
-            <hr />
+            <hr />    
+
+            <ol id="main-links">
+                <li id="joopl-minified"><a href="https://joopl.codeplex.com/downloads/get/674883" target="_self">Download minified jOOPL 2.2.0</a></li>
+                <li id="joopl-sourcecode"><a href="http://joopl.codeplex.com/SourceControl/BrowseLatest" target="_self">Browse latest source code</a></li>
+            </ol>
 
             <h2>Welcome to the official jOOPL documentation site!</h2>
             <p>jOOPL stands for <strong>J</strong>avaScript <strong>O</strong>bject-<strong>O</strong>riented <strong>P</strong>rogramming <strong>L</strong>ibrary.</p>
