--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <div id="api-list">
     <h2 class="off-left">> Keywords</h2>
     <ol id="keyword-list"> 
+        <li><a href="./classes/$namespace.html#namespace-global" target="_self"><strong>$global</strong></a></li>
     
         <li><a href="./classes/$def.html"><strong>$def</strong></a></li>
     
@@ -119,8 +120,10 @@
             <h2>Welcome to the official jOOPL documentation site!</h2>
             <p>jOOPL stands for <strong>J</strong>avaScript <strong>O</strong>bject-<strong>O</strong>riented <strong>P</strong>rogramming <strong>L</strong>ibrary.</p>
             <p>JavaScript has a limited but yet useful type definition system. In comparison to other modern programming languages like C#, Java, Ruby, Python and many others, JavaScript is not class-oriented but prototype-oriented.</p>
-            <p>Maybe prototypes are enough for simple developments, but when things get harder, out-of-the-box JavaScript type definition syntax gets bloated and harder to maintain and understand.</p>
             <p>jOOPL introduces a powerful class-oriented type definition system that equals most of features found in modern and well-known object-oriented languages like C# and Java, and it retaains 100% compatibility with plain JavaScript objects since jOOPL creates standard JavaScript constructors.</p>
+
+            <h3>Licensing</h3>
+            <p>jOOPL is a completely open sourced, free-of-charge JavaScript library distributed under the Apache License 2.0.</p>
 
             <h3>How to get started?</h3>
             <p>First of all, take a look at the <a href="classes/$def.html">documentation talking about how to work with classes</a> and <a href="classes/$namespace.html">namespaces</a>!</p>
