Updating the documentation site
Now jOOPL is hosted by CDNJS (thanks!), an open Content Delivery
Network.

For that reason, I've updated the documentation site and links to
download jOOPL.

--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
 
     <h2 class="off-left">> Quick links</h2>
     <ol id="quick-links">
-        <li><a href="http://joopl.codeplex.com">Official Codeplex Web site</a></li>
-        <li><a href="https://joopl.codeplex.com/downloads/get/674883"><strong>Download minified jOOPL 2.2.0</strong></a></li>
-        <li><a href="http://joopl.codeplex.com/SourceControl/BrowseLatest">Browse latest source code</a></li>
-        <li><a href="http://joopl.codeplex.com/discussions">Discussion board</a></li>
-        <li><a href="http://joopl.codeplex.com/workitem/list/basic">Issue tracker</a></li>
+        <li><a href="https://github.com/mfidemraizer/joopl">jOOPL on GitHub</a></li>
+        <li><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js"><strong>Download minified jOOPL 2.2.0 (CDN)</strong></a></li>
+        <li><a href="https://github.com/mfidemraizer/joopl/issues">Issue tracker</a></li>
         <!--<li><a href="./classes/$def.html#class-properties" target="_self">Test</a></li>-->
     </ol>
 
@@ -113,8 +111,8 @@
             <hr />    
 
             <ol id="main-links">
-                <li id="joopl-minified"><a href="https://joopl.codeplex.com/downloads/get/674883" target="_self">Download minified jOOPL 2.2.0</a></li>
-                <li id="joopl-sourcecode"><a href="http://joopl.codeplex.com/SourceControl/BrowseLatest" target="_self">Browse latest source code</a></li>
+                <li id="joopl-minified"><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js" target="_self">jOOPL 2.2.0 CDN</a></li>
+                <li id="joopl-sourcecode"><a href="https://github.com/mfidemraizer/joopl" target="_self">Source code on GitHub!</a></li>
             </ol>
 
             <h2>Welcome to the official jOOPL documentation site!</h2>
@@ -124,6 +122,12 @@
 
             <h3>Licensing</h3>
             <p>jOOPL is a completely open sourced, free-of-charge JavaScript library distributed under the Apache License 2.0.</p>
+
+            <h3>Now jOOPL on CDNJS!</h3>
+            <p>Now jOOPL is in <a href="http://cdnjs.com/" target="_blank">CDNJS</a>, an open <i>Content Delivery Network</i>. From now, please include jOOPL in your Web sites using this full URL:</p>
+            <strong>http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js</strong>
+            <p>Serving jOOPL from a CDN is very important. <a href="http://en.wikipedia.org/wiki/Content_delivery_network" target="_blank">Learn more about <i>Content Delivery Networks</i> here (Wikipedia)</a></p>
+            <p>Of course, jOOPL can be also downloaded to be used from a local file system.</p>
 
             <h3>How to get started?</h3>
             <p>First of all, take a look at the <a href="classes/$def.html">documentation talking about how to work with classes</a> and <a href="classes/$namespace.html">namespaces</a>!</p>
