--- a/classes/$def.html
+++ b/classes/$def.html
@@ -66,11 +66,9 @@
 
     <h2 class="off-left">> Quick links</h2>
     <ol id="quick-links">
-        <li><a href="http://joopl.codeplex.com">Official Codeplex Web site</a></li>
-        <li><a href="https://joopl.codeplex.com/downloads/get/674883"><strong>Download minified jOOPL 2.2.0</strong></a></li>
-        <li><a href="http://joopl.codeplex.com/SourceControl/BrowseLatest">Browse latest source code</a></li>
-        <li><a href="http://joopl.codeplex.com/discussions">Discussion board</a></li>
-        <li><a href="http://joopl.codeplex.com/workitem/list/basic">Issue tracker</a></li>
+        <li><a href="https://github.com/mfidemraizer/joopl">jOOPL on GitHub</a></li>
+        <li><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js"><strong>Download minified jOOPL 2.2.0 (CDN)</strong></a></li>
+        <li><a href="https://github.com/mfidemraizer/joopl/issues">Issue tracker</a></li>
         <!--<li><a href="../classes/$def.html#class-properties" target="_self">Test</a></li>-->
     </ol>
 
