Fixing a link to CodePlex. Now points to GitHub
Now issues should be filled in the GitHub repository...

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ $namespace.register("samples", function() {
             <p>This project is actively developed by Matias Fidemraizer (<a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">LinkedIn profile here</a>)</p>
 
             <h3>I want to contribute, give feedback...</h3>
-            <p><i>It would be a great idea! Send me a message <a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">to my LinkedIn profile</a> and we can start talking there. Or just <a href="http://joopl.codeplex.com" target="_blank">open a discussion/issue on the official jOOPL CodePlex site</a>!</p>
+            <p><i>It would be a great idea! Send me a message <a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">to my LinkedIn profile</a> and we can start talking there. Or just <a href="http://joopl.codeplex.com" target="_blank">open an issue in the GitHub repository!</a></p>
         </div>
     </div>
                     </div>
