--- a/classes/$def.html
+++ b/classes/$def.html
@@ -19,6 +19,7 @@
     <script src="../assets/js/apidocs.js"></script>-->
 </head>
 <body class="yui3-skin-sam">
+    <a href="https://github.com/mfidemraizer/joopl"><img style="z-index: 9999; position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 
 <div id="doc">
     <div id="hd" class="yui3-g header" style="display: none">
