Link to the Google Group and mailing list in the sidebar and main page!
I've created a Google Group in order to discuss feedback, suggestions,
ideas....

--- a/classes/$def.html
+++ b/classes/$def.html
@@ -67,6 +67,7 @@
 
     <h2 class="off-left">> Quick links</h2>
     <ol id="quick-links">
+        <li><a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">jOOPL Google Group</a></li>
         <li><a href="https://github.com/mfidemraizer/joopl">jOOPL on GitHub</a></li>
         <li><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js"><strong>Download minified jOOPL 2.2.0 (CDN)</strong></a></li>
         <li><a href="https://github.com/mfidemraizer/joopl/issues">Issue tracker</a></li>
