--- a/files/joopl.js.html
+++ b/files/joopl.js.html
@@ -67,6 +67,7 @@
 
     <h2 class="off-left">> Quick links</h2>
     <ol id="quick-links">
+        <li><a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">jOOPL Google Group</a></li>
         <li><a href="https://github.com/mfidemraizer/joopl">jOOPL on GitHub</a></li>
         <li><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js"><strong>Download minified jOOPL 2.2.0 (CDN)</strong></a></li>
         <li><a href="https://github.com/mfidemraizer/joopl/issues">Issue tracker</a></li>
