--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
     <h2 class="off-left">> Quick links</h2>
     <ol id="quick-links">
+        <li><a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">jOOPL Google Group</a></li>
         <li><a href="https://github.com/mfidemraizer/joopl">jOOPL on GitHub</a></li>
         <li><a href="http://cdnjs.cloudflare.com/ajax/libs/joopl/2.2.0/joopl.min.js"><strong>Download minified jOOPL 2.2.0 (CDN)</strong></a></li>
         <li><a href="https://github.com/mfidemraizer/joopl/issues">Issue tracker</a></li>
@@ -177,7 +178,10 @@ $namespace.register("samples", function() {
             <p>This project is actively developed by Matias Fidemraizer (<a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">LinkedIn profile here</a>)</p>
 
             <h3>I want to contribute, give feedback...</h3>
-            <p><i>It would be a great idea! Send me a message <a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">to my LinkedIn profile</a> and we can start talking there. Or just <a href="http://joopl.codeplex.com" target="_blank">open an issue in the GitHub repository!</a></p>
+            <p>Great! You're welcome.</p>
+            <p>The main channel for discussions and ask questions is <a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">the jOOPL's Google Group / Mailing list (click here to go there)</a>. Feel free to post any question, suggestion or debate about any feature or improvement.</p>
+            <p>Also, you can <a href="https://github.com/mfidemraizer/joopl" target="_blank">fill an issue in the jOOPL's GitHub repository (click here to go there).</a></p>
+            <p><i>If you're looking for a direct contact with the project leader, please send a message to my profile on LinkedIn (<a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">Matias Fidemraizer's LinkedIn profile link)</a> and we can start talking there.</p>
         </div>
     </div>
                     </div>
