--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <ol id="oop-hints">
         <li><a href="./classes/$namespace.html#method_register" target="_self">Registering namespaces how-to</a></li>
         <li><a href="./classes/$namespace.html#method_using" target="_self">Importing namespaces</a></li>
-        <li><a href="./classes/$def.html#class-define"target="_self">Define a class how-to</a></li>
+        <li><a href="./classes/$def.html#class-define" target="_self">Define a class how-to</a></li>
         <li><a href="./classes/$def.html#class-constructors" target="_self">Class constructors</a></li>
         <li><a href="./classes/$def.html#class-properties" target="_self">Class properties</a></li>
         <li><a href="./classes/$def.html#class-methods" target="_self">Class methods</a></li>
         <li><a href="./classes/$def.html#class-events" target="_self">Custom events how-to</a></li>
-        <li><a href="./classes/$def.html#class-instances" target="_self">Creating class instances how-to</li>
+        <li><a href="./classes/$def.html#class-instances" target="_self">Creating class instances how-to</a></li>
         <li><a href="./classes/$def.html#class-inheritance" target="_self">Class inheritance how-to</a></li>
         <li><a href="./classes/$def.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
         <li><a href="./classes/$enumdef.html#index" target="_self">Enumerations</a></li>
@@ -196,7 +196,7 @@ $namespace.register("samples", function() {
             <p>Great! You're welcome.</p>
             <p>The main channel for discussions and ask questions is <a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">the jOOPL's Google Group / Mailing list (click here to go there)</a>. Feel free to post any question, suggestion or debate about any feature or improvement.</p>
             <p>Also, you can <a href="https://github.com/mfidemraizer/joopl" target="_blank">fill an issue in the jOOPL's GitHub repository (click here to go there).</a></p>
-            <p><i>If you're looking for a direct contact with the project leader, please send a message to my profile on LinkedIn (<a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">Matias Fidemraizer's LinkedIn profile link)</a> and we can start talking there.</p>
+            <p>If you're looking for a direct contact with the project leader, please send a message to my profile on LinkedIn (<a href="http://linkedin.com/in/mfidemraizer/en" target="_blank">Matias Fidemraizer's LinkedIn profile link)</a> and we can start talking there.</p>
         </div>
     </div>
                     </div>
