Small update: some wrong doc on Enum API reference was detected.

--- a/classes/Enum.html
+++ b/classes/Enum.html
@@ -268,7 +268,7 @@
         closed: 1
     });
 
-    this.Enum.Parse(State, "open")
+    this.Enum.parseName(State, "open")
 });
 </code></pre>
             </div>
