--- a/files/joopl.js.html
+++ b/files/joopl.js.html
@@ -1682,7 +1682,7 @@ var $enumdef = null;
                             closed: 1
                         });
 
-                        this.Enum.Parse(State, &quot;open&quot;)
+                        this.Enum.parseName(State, &quot;open&quot;)
                     });
                 */
                 parseName: function(enumType, valueName) {
