--- a/files/joopl.js.html
+++ b/files/joopl.js.html
@@ -64,10 +64,10 @@
 
     <h2 class="off-left">> API reference</h2>
     <ol id="class-list"> 
-        <li><a href="../classes/attribute.html" target="_self"><strong>joopl.Attribute</strong></a></li>
-        <li><a href="../classes/enum.html" target="_self"><strong>joopl.Enum</strong></a></li>
-        <li><a href="../classes/enumvalue.html" target="_self"><strong>joopl.EnumValue</strong></a></li>
-        <li><a href="../classes/type.html" target="_self"><strong>joopl.Type</strong></a></li>
+        <li><a href="../classes/Attribute.html" target="_self"><strong>joopl.Attribute</strong></a></li>
+        <li><a href="../classes/Enum.html" target="_self"><strong>joopl.Enum</strong></a></li>
+        <li><a href="../classes/EnumValue.html" target="_self"><strong>joopl.EnumValue</strong></a></li>
+        <li><a href="../classes/Type.html" target="_self"><strong>joopl.Type</strong></a></li>
     </ol>
 
     <h2 class="off-left">> Quick links</h2>
@@ -148,6 +148,7 @@ var $interfacedef = null; // A shortcut to $interface.declare(...)
 var $implements = null; // Holds a function to check if an object implements an interface
 var $global = {}; // Represents the global scope.
 var $enumdef = null;
+var $manifest = null;
 
 (function (undefined) {
     &quot;use strict&quot;;
@@ -348,6 +349,18 @@ var $enumdef = null;
 
     Object.freeze(TypeUtil);
 
+
+    $manifest = {
+        _files: [],
+
+        get lastFile() {
+            return this._files[this._files.length - 1];
+        },
+        
+        file: function (fileName) {
+            this._files.push(fileName);
+        }
+    };
 
     /**
     The &#x60;$namespace&#x60; keyword represents an static object holding methods/functions to manage namespaces.
